# karinsite

./: .gitignore  AGENTS.md  opencode.json  pyproject.toml
.claude/agents/: ux-ui-designer.md
.opencode/agent/: code-reviewer.md  devops.md  fastapi-backend.md  security-tester.md  test-writer.md  ux-reviewer.md
.opencode/skills/deployment/: SKILL.md
.opencode/skills/git-commit/: SKILL.md
.opencode/skills/git-workflow/: SKILL.md
.opencode/skills/python-fastapi-development/: SKILL.md
.opencode/skills/ui-ux-pro-max/: SKILL.md
.opencode/skills/ui-ux-pro-max/rules/: accessibility.md  information-architecture.md  interaction-design.md  research.md  visual-design.md
.opencode/skills/web-security-testing/: SKILL.md
app/: main.py
app/api/v1/: courses.py
app/core/: config.py
static/css/: style.css
static/js/: courses.js  main.js
templates/: about.html  contact.html  course_detail.html  courses.html  index.html
